# GPT-Action-APIs

00_GPT_APIs/00_Project_Student Database Assistant/: .dockerignore  Dockerfile  README.md  db.py  docker-compose.yaml  main.py  privacy_policy.yaml  requirements.txt  routes.py  test.py
00_GPT_APIs/01_eye_glasses_ecommerce_GPT/admin_api/: pyproject.toml
00_GPT_APIs/01_eye_glasses_ecommerce_GPT/admin_api/api/: database.py  main.py  models.py
00_GPT_APIs/01_eye_glasses_ecommerce_GPT/order_api/: Dockerfile  push_ecr_command.md  pyproject.toml
00_GPT_APIs/01_eye_glasses_ecommerce_GPT/order_api/apis/: app_config.yaml  create_user.py  database.py  main.py  models.py  order_items.py  recommendation.py  routes.py  schemas.py
00_GPT_APIs/02_maths_techer_assistent/: .gitignore  assistent.ipynb
00_GPT_APIs/03_online_Imtiaz_mart_GPT/: Dockerfile  compose.yaml
00_GPT_APIs/03_online_Imtiaz_mart_GPT/.devcontainer/: devcontainer.json
00_GPT_APIs/03_online_Imtiaz_mart_GPT/admin_GPT/: Dockerfile  Product_Details_Extract.xlsx  db.py  grocery_data.py  main.py  models.py  pyproject.toml  routes.py
00_GPT_APIs/03_online_Imtiaz_mart_GPT/admin_GPT/apis/: db.py  grocery_data.py  main.py  routes.py
00_GPT_APIs/03_online_Imtiaz_mart_GPT/admin_gpt/: README.md  behave.ini  db.py  main.py  models.py  pretty.output  requirements.txt  routes.py
00_GPT_APIs/03_online_Imtiaz_mart_GPT/admin_gpt/.github/workflows/: deploy.yml
00_GPT_APIs/03_online_Imtiaz_mart_GPT/admin_gpt/features/: get_products.feature
00_GPT_APIs/03_online_Imtiaz_mart_GPT/admin_gpt/features/steps/: product_steps.py
00_GPT_APIs/03_online_Imtiaz_mart_GPT/login_or_signup/: Dockerfile  pyproject.toml
00_GPT_APIs/03_online_Imtiaz_mart_GPT/login_or_signup/api/signup/: .env  db.py  main.py
01_Custom_GPT/: README.md
