[tool.poetry]
name = "admin-gpt"
version = "0.1.0"
description = ""
authors = ["Raza Rizwan <razarizwanahmed545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
fastapi = "^0.111.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
