[tool.poetry]
name = "login-or-signup"
version = "0.1.0"
description = ""
authors = ["Raza Rizwan <razarizwanahmed545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
