[tool.poetry]
name = "login-or-signup"
version = "0.1.0"
description = ""
authors = ["Raza Rizwan <razarizwanahmed545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
psycopg = "^3.1.19"
gunicorn = "^22.0.0"
python-multipart = "^0.0.9"
psycopg-binary = "^3.1.19"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
